src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  ExtendsClause : EXTENDS IDENTIFIER
  14                |

  15  FieldList : FieldList VariableDef
  16            | FieldList FunctionDef
  17            |

  18  Formals : VariableList
  19          |

  20  VariableList : VariableList ',' Variable
  21               | Variable

  22  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  23              | Type IDENTIFIER '(' Formals ')' StmtBlock

  24  StmtBlock : '{' StmtList '}'

  25  StmtList : StmtList Stmt
  26           |

  27  Stmt : VariableDef
  28       | SimpleStmt ';'
  29       | IfStmt
  30       | WhileStmt
  31       | ForStmt
  32       | ReturnStmt ';'
  33       | PrintStmt ';'
  34       | BreakStmt ';'
  35       | StmtBlock

  36  SimpleStmt : LValue '=' Expr
  37             | Call
  38             |

  39  Receiver : Expr '.'
  40           |

  41  LValue : Receiver IDENTIFIER
  42         | Expr '[' Expr ']'

  43  Call : Receiver IDENTIFIER '(' Actuals ')'

  44  Expr : LValue
  45       | Call
  46       | Constant
  47       | Expr '+' Expr
  48       | Expr '-' Expr
  49       | Expr '*' Expr
  50       | Expr '/' Expr
  51       | Expr '%' Expr
  52       | Expr EQUAL Expr
  53       | Expr NOT_EQUAL Expr
  54       | Expr '<' Expr
  55       | Expr '>' Expr
  56       | Expr LESS_EQUAL Expr
  57       | Expr GREATER_EQUAL Expr
  58       | Expr AND Expr
  59       | Expr OR Expr
  60       | '(' Expr ')'
  61       | '-' Expr
  62       | '!' Expr
  63       | INC Expr
  64       | Expr INC
  65       | DEC Expr
  66       | Expr DEC
  67       | Expr '?' Expr ':' Expr
  68       | READ_INTEGER '(' ')'
  69       | READ_LINE '(' ')'
  70       | THIS
  71       | NEW IDENTIFIER '(' ')'
  72       | NEW Type '[' Expr ']'
  73       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  74       | '(' CLASS IDENTIFIER ')' Expr
  75       | NUMINSTANCES '(' IDENTIFIER ')'

  76  Constant : LITERAL
  77           | NULL

  78  Actuals : ExprList
  79          |

  80  ExprList : ExprList ',' Expr
  81           | Expr

  82  WhileStmt : WHILE '(' Expr ')' Stmt

  83  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  84  BreakStmt : BREAK

  85  IfStmt : IF '(' Expr ')' Stmt ElseClause

  86  ElseClause : ELSE Stmt
  87             |

  88  ReturnStmt : RETURN Expr
  89             | RETURN

  90  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (14)

	EXTENDS  shift 7
	'{'  reduce 14

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (13)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (13)

	.  reduce 13


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (17)

	.  reduce 17

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (15)
	FieldList : FieldList . FunctionDef  (16)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	'}'  shift 18
	.  error

	VariableDef  goto 19
	Variable  goto 20
	Type  goto 21
	FunctionDef  goto 22


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 23
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (22)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Type  goto 24


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 19
	FieldList : FieldList VariableDef .  (15)

	.  reduce 15


state 20
	VariableDef : Variable . ';'  (4)

	';'  shift 25
	.  error


state 21
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 26
	'['  shift 27
	.  error


state 22
	FieldList : FieldList FunctionDef .  (16)

	.  reduce 16


state 23
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 24
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (22)

	IDENTIFIER  shift 28
	'['  shift 27
	.  error


state 25
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 26
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 29
	';'  reduce 5


state 27
	Type : Type '[' . ']'  (11)

	']'  shift 30
	.  error


state 28
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (22)

	'('  shift 31
	.  error


state 29
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 34
	VariableList  goto 35


state 30
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 31
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (22)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 36
	VariableList  goto 35


state 32
	VariableList : Variable .  (21)

	.  reduce 21


state 33
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 37
	'['  shift 27
	.  error


state 34
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 38
	.  error


state 35
	Formals : VariableList .  (18)
	VariableList : VariableList . ',' Variable  (20)

	','  shift 39
	')'  reduce 18


state 36
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (22)

	')'  shift 40
	.  error


state 37
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 38
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 41
	.  error

	StmtBlock  goto 42


state 39
	VariableList : VariableList ',' . Variable  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Variable  goto 43
	Type  goto 33


state 40
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (22)

	'{'  shift 41
	.  error

	StmtBlock  goto 44


state 41
	StmtBlock : '{' . StmtList '}'  (24)
	StmtList : .  (26)

	.  reduce 26

	StmtList  goto 45


state 42
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 43
	VariableList : VariableList ',' Variable .  (20)

	.  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (22)

	.  reduce 22


state 45
	StmtBlock : '{' StmtList . '}'  (24)
	StmtList : StmtList . Stmt  (25)
	SimpleStmt : .  (38)
	Receiver : .  (40)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	IF  shift 50
	RETURN  shift 51
	BREAK  shift 52
	NEW  shift 53
	PRINT  shift 54
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'{'  shift 41
	'}'  shift 65
	IDENTIFIER  reduce 40
	';'  reduce 38

	VariableDef  goto 66
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 67
	Stmt  goto 68
	SimpleStmt  goto 69
	IfStmt  goto 70
	WhileStmt  goto 71
	ForStmt  goto 72
	ReturnStmt  goto 73
	PrintStmt  goto 74
	BreakStmt  goto 75
	LValue  goto 76
	Expr  goto 77
	Call  goto 78
	Receiver  goto 79
	Constant  goto 80


state 46
	Constant : NULL .  (77)

	.  reduce 77


state 47
	Expr : THIS .  (70)

	.  reduce 70


state 48
	WhileStmt : WHILE . '(' Expr ')' Stmt  (82)

	'('  shift 81
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (83)

	'('  shift 82
	.  error


state 50
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (85)

	'('  shift 83
	.  error


state 51
	ReturnStmt : RETURN . Expr  (88)
	ReturnStmt : RETURN .  (89)
	Receiver : .  (40)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 40
	';'  reduce 89

	LValue  goto 84
	Expr  goto 85
	Call  goto 86
	Receiver  goto 79
	Constant  goto 80


state 52
	BreakStmt : BREAK .  (84)

	.  reduce 84


state 53
	Expr : NEW . IDENTIFIER '(' ')'  (71)
	Expr : NEW . Type '[' Expr ']'  (72)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 87
	.  error

	Type  goto 88


state 54
	PrintStmt : PRINT . '(' ExprList ')'  (90)

	'('  shift 89
	.  error


state 55
	Expr : READ_INTEGER . '(' ')'  (68)

	'('  shift 90
	.  error


state 56
	Expr : READ_LINE . '(' ')'  (69)

	'('  shift 91
	.  error


state 57
	Constant : LITERAL .  (76)

	.  reduce 76


state 58
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (73)

	'('  shift 92
	.  error


state 59
	Expr : INC . Expr  (63)
	Receiver : .  (40)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 40

	LValue  goto 84
	Expr  goto 93
	Call  goto 86
	Receiver  goto 79
	Constant  goto 80


state 60
	Expr : DEC . Expr  (65)
	Receiver : .  (40)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 40

	LValue  goto 84
	Expr  goto 94
	Call  goto 86
	Receiver  goto 79
	Constant  goto 80


state 61
	Expr : NUMINSTANCES . '(' IDENTIFIER ')'  (75)

	'('  shift 95
	.  error


state 62
	Expr : '-' . Expr  (61)
	Receiver : .  (40)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 40

	LValue  goto 84
	Expr  goto 96
	Call  goto 86
	Receiver  goto 79
	Constant  goto 80


state 63
	Expr : '!' . Expr  (62)
	Receiver : .  (40)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 40

	LValue  goto 84
	Expr  goto 97
	Call  goto 86
	Receiver  goto 79
	Constant  goto 80


state 64
	Expr : '(' . Expr ')'  (60)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (74)
	Receiver : .  (40)

	CLASS  shift 98
	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	INC  shift 59
	DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	IDENTIFIER  reduce 40

	LValue  goto 84
	Expr  goto 99
	Call  goto 86
	Receiver  goto 79
	Constant  goto 80


state 65
	StmtBlock : '{' StmtList '}' .  (24)

	.  reduce 24


state 66
	Stmt : VariableDef .  (27)

	.  reduce 27


state 67
	Stmt : StmtBlock .  (35)

	.  reduce 35


state 68
	StmtList : StmtList Stmt .  (25)

	.  reduce 25


state 69
	Stmt : SimpleStmt . ';'  (28)

	';'  shift 100
	.  error


state 70
	Stmt : IfStmt .  (29)

	.  reduce 29


state 71
	Stmt : WhileStmt .  (30)

	.  reduce 30


state 72
	Stmt : ForStmt .  (31)

	.  reduce 31


state 73
	Stmt : ReturnStmt . ';'  (32)

	';'  shift 101
	.  error


state 74
	Stmt : PrintStmt . ';'  (33)

	';'  shift 102
	.  error


state 75
	Stmt : BreakStmt . ';'  (34)

	';'  shift 103
	.  error


state 76
	SimpleStmt : LValue . '=' Expr  (36)
	Expr : LValue .  (44)

	'='  shift 104
	AND  reduce 44
	OR  reduce 44
	LESS_EQUAL  reduce 44
	GREATER_EQUAL  reduce 44
	EQUAL  reduce 44
	NOT_EQUAL  reduce 44
	INC  reduce 44
	DEC  reduce 44
	'+'  reduce 44
	'-'  reduce 44
	'*'  reduce 44
	'/'  reduce 44
	'%'  reduce 44
	'>'  reduce 44
	'<'  reduce 44
	'.'  reduce 44
	'['  reduce 44
	'?'  reduce 44


state 77
	Receiver : Expr . '.'  (39)
	LValue : Expr . '[' Expr ']'  (42)
	Expr : Expr . '+' Expr  (47)
	Expr : Expr . '-' Expr  (48)
	Expr : Expr . '*' Expr  (49)
	Expr : Expr . '/' Expr  (50)
	Expr : Expr . '%' Expr  (51)
	Expr : Expr . EQUAL Expr  (52)
	Expr : Expr . NOT_EQUAL Expr  (53)
	Expr : Expr . '<' Expr  (54)
	Expr : Expr . '>' Expr  (55)
	Expr : Expr . LESS_EQUAL Expr  (56)
	Expr : Expr . GREATER_EQUAL Expr  (57)
	Expr : Expr . AND Expr  (58)
	Expr : Expr . OR Expr  (59)
	Expr : Expr . INC  (64)
	Expr : Expr . DEC  (66)
	Expr : Expr . '?' Expr ':' Expr  (67)

	AND  shift 105
	OR  shift 106
	LESS_EQUAL  shift 107
	GREATER_EQUAL  shift 108
	EQUAL  shift 109
	NOT_EQUAL  shift 110
	INC  shift 111
	DEC  shift 112
	'+'  shift 113
	'-'  shift 114
	'*'  shift 115
	'/'  shift 116
	'%'  shift 117
	'>'  shift 118
	'<'  shift 119
	'.'  shift 120
	'['  shift 121
	'?'  shift 122
	.  error


state 78
	SimpleStmt : Call .  (37)
	Expr : Call .  (45)

	AND  reduce 45
	OR  reduce 45
	LESS_EQUAL  reduce 45
	GREATER_EQUAL  reduce 45
	EQUAL  reduce 45
	NOT_EQUAL  reduce 45
	INC  reduce 45
	DEC  reduce 45
	'+'  reduce 45
	'-'  reduce 45
	'*'  reduce 45
	'/'  reduce 45
	'%'  reduce 45
	'>'  reduce 45
	'<'  reduce 45
	'.'  reduce 45
	';'  reduce 37
	')'  reduce 37
	'['  reduce 45
	'?'  reduce 45


state 79
	LValue : Receiver . IDENTIFIER  (41)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (43)

	IDENTIFIER  shift 123
	.  error


state 80
	Expr : Constant .  (46)

	.  reduce 46


state 81
	WhileStmt : WHILE '(' . Expr ')' Stmt  (82)
	Receiver : .  (40)
